deployment/services/bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: stage-palazzi
  labels:
    app: bff
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/bff-api:1.0.1
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  labels:
    app: bff
spec:
  selector:
    app: bff
  ports:
  - name: http
    port: 8085
    targetPort: 8085
    protocol: TCP
  type: ClusterIP
