deployment/services/debezium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium
  namespace: stage-palazzi
  labels:
    app: debezium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: debezium
  template:
    metadata:
      labels:
        app: debezium
    spec:
      containers:
      - name: debezium
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/debezium:4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: debezium-service
  labels:
    app: debezium
spec:
  selector:
    app: debezium
  ports:
  - name: http
    port: 8086
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
