deployment/services/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: stage-palazzi
  labels:
    app: notification
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/notification-api:1.0.0
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification
spec:
  selector:
    app: notification
  ports:
  - name: http
    port: 8084
    targetPort: 8084
    protocol: TCP
  type: ClusterIP
