deployment/services/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: stage-palazzi
  labels:
    app: order
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/orders-api:1.0.0
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
  type: ClusterIP
