deployment/services/travel-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-catalog
  namespace: stage-palazzi
  labels:
    app: travel-catalog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: travel-catalog
  template:
    metadata:
      labels:
        app: travel-catalog
    spec:
      containers:
      - name: travel-catalog
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/travel-catalog-api:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: travel-catalog-service
  labels:
    app: travel-catalog
spec:
  selector:
    app: travel-catalog
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
