deployment/services/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: stage-palazzi
  labels:
    app: user
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/user-api:1.0.0
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user
spec:
  selector:
    app: user
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
