deployment/services/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: image-registry.openshift-image-registry.svc:5000/stage-palazzi/frontend:0.0.14
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
        # This config is necessary to comply to Openshift security constraints
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
        # Health checks for nginx
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 8088        # External port - can be 80
      targetPort: 8088  # Must match containerPort
  # type: NodePort
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: stage-palazzi
  labels:
    app: frontend
spec:
  host: smart-travel.apps.stage-soldi-okd.lutechstage.com
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: http  # Reference the named port in service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
